[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/scripts/ui/QuestUI.gd" id="1"]

[node name="QuestUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -120.0
offset_right = 180.0
offset_bottom = 120.0

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 28.0
text = "Quest Board"
horizontal_alignment = 1

[node name="QuestsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 36.0
offset_right = 352.0
offset_bottom = 200.0

[node name="NoQuestsLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 80.0
offset_right = 352.0
offset_bottom = 120.0
text = "No quests available at this time."
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetailsPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
offset_left = 8.0
offset_top = 32.0
offset_right = 352.0
offset_bottom = 200.0

[node name="QuestNameLabel" type="Label" parent="Panel/DetailsPanel"]
layout_mode = 1
offset_left = 8.0
offset_top = 4.0
offset_right = 336.0
offset_bottom = 22.0
text = "Quest Name"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Panel/DetailsPanel"]
layout_mode = 1
offset_left = 8.0
offset_top = 26.0
offset_right = 336.0
offset_bottom = 66.0
text = "Quest description goes here."
autowrap_mode = 2

[node name="RewardLabel" type="Label" parent="Panel/DetailsPanel"]
layout_mode = 1
offset_left = 8.0
offset_top = 70.0
offset_right = 336.0
offset_bottom = 88.0
text = "Reward: 50 Gold"

[node name="ObjectivesLabel" type="Label" parent="Panel/DetailsPanel"]
layout_mode = 1
offset_left = 8.0
offset_top = 92.0
offset_right = 336.0
offset_bottom = 130.0
text = "Objectives:
- Do thing 1
- Do thing 2"
autowrap_mode = 2

[node name="AcceptButton" type="Button" parent="Panel/DetailsPanel"]
layout_mode = 1
offset_left = 60.0
offset_top = 134.0
offset_right = 160.0
offset_bottom = 162.0
text = "Accept"

[node name="DeclineButton" type="Button" parent="Panel/DetailsPanel"]
layout_mode = 1
offset_left = 184.0
offset_top = 134.0
offset_right = 284.0
offset_bottom = 162.0
text = "Decline"

[node name="InstructionsLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 208.0
offset_right = 352.0
offset_bottom = 232.0
text = "Select quest, Cancel to close"
horizontal_alignment = 1
